--- a/static/index.html
+++ b/static/index.html
@@ -1057,8 +1057,8 @@ var _wpcf7 = {"loaderUrl":"https:\/\/tanvas.co\/wp-content\/plugins\/contact-for
                     
                     console.log(prediction);
                     
-                    $http.post("/prediction/", prediction).then(function(res) {
-                        $scope.result = "Your project has " + res.data;
+                    $http.post("/prediction", prediction).then(function(res) {
+                        $scope.result = "Your project has a [loss:win] chance of " + res.data;
                     }, function(err) {
                         $scope.result = "There was an error with the prediction :(";
                     })
